--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   json_annotation: ^3.1.1
   device_info: ^1.0.0
   shared_preferences: ^0.5.12+4
+  image_picker: ^0.6.7+17
 
   # stacked architecture
   observable_ish: ^2.1.4
