--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.8.1
   build_runner: ^1.0.0
   json_serializable: ^3.5.0
+  flash: ^1.3.1
 
 flutter_icons:
   image_path: "asset/app_icon.png"
