--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   device_info: ^1.0.0
   shared_preferences: ^0.5.12+4
   image_picker: ^0.6.7+17
+  animations: ^1.1.2
 
   # stacked architecture
   observable_ish: ^2.1.4
