--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   image_picker: ^0.6.7+17
   animations: ^1.1.2
+  bubble: ^1.1.9+1
 
   # stacked architecture
   observable_ish: ^2.1.4
