--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   observable_ish: ^2.1.4
   stacked: ^1.7.6
   stacked_services: ^0.5.4+4
+  stacked_hooks: ^0.1.3+2
 
 dev_dependencies:
   flutter_test:
