--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   image_picker: ^0.6.7+17
   animations: ^1.1.2
   bubble: ^1.1.9+1
+  socket_io_client: ^0.9.12
+  provider: ^4.3.3
 
   # stacked architecture
   observable_ish: ^2.1.4
